--- a/packages/app/.eslintrc.json
+++ b/packages/app/.eslintrc.json
@@ -4,11 +4,11 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
     // Uncomment the following lines to enable eslint-config-prettier
     // Is not enabled right now to avoid issues with the Next.js repo
-    // "prettier",
-    // "prettier/@typescript-eslint"
+    "prettier",
+    "prettier/@typescript-eslint"
   ],
   "env": {
     "es6": true,
@@ -39,5 +39,28 @@
         "allow": ["warn", "error"]
       }
     ]
+  },
+  "settings": {
+    "react": {
+      "createClass": "createReactClass", // Regex for Component Factory to use,
+                                         // default to "createReactClass"
+      "pragma": "React",  // Pragma to use, default to "React"
+      "version": "detect" // React version. "detect" automatically picks the version you have installed.
+                           // You can also use `16.0`, `16.3`, etc, if you want to override the detected value.
+                           // default to latest and warns if missing
+                           // It will default to "detect" in the future
+      //"flowVersion": "0.53" // Flow version
+    }
+    //"propWrapperFunctions": [
+        // The names of any function used to wrap propTypes, e.g. `forbidExtraProps`. If this isn't set, any propTypes wrapped in a function will be skipped.
+        //"forbidExtraProps",
+        //{"property": "freeze", "object": "Object"},
+        //{"property": "myFavoriteWrapper"}
+    //],
+    //"linkComponents": [
+      // Components used as alternatives to <a> for linking, eg. <Link to={ url } />
+      //"Hyperlink",
+      //{"name": "Link", "linkAttribute": "to"}
+    //]
   }
 }
