--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -29,6 +29,7 @@
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.55",
+    "lazysizes": "^5.2.2",
     "next": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
