--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,14 +26,14 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "^4.10.1",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.55",
-    "lazysizes": "^5.2.2",
-    "next": "^9.4.5-canary.12",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-swipeable-views": "^0.13.9"
+    "@material-ui/core": "latest",
+    "@material-ui/icons": "latest",
+    "@material-ui/lab": "latest",
+    "lazysizes": "latest",
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-swipeable-views": "latest"
   },
   "devDependencies": {
     "@testing-library/react": "^10.0.1",
@@ -51,6 +51,7 @@
     "jest": "^25.2.3",
     "jest-watch-typeahead": "^0.5.0",
     "lint-staged": "^10.0.10",
+    "next-transpile-modules": "^3.3.0",
     "prettier": "^2.0.2",
     "typescript": "^3.8.3"
   }
