--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "app",
+  "name": "core",
   "author": "Mehdi Karim",
   "license": "MIT",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "cross-env NODE_ENV=production node server.js",
     "type-check": "tsc --pretty --noEmit",
     "format": "prettier --write **/*.{js,ts,tsx}",
     "lint": "eslint . --ext ts --ext tsx --ext js",
@@ -29,10 +29,13 @@
     "@material-ui/core": "latest",
     "@material-ui/icons": "latest",
     "@material-ui/lab": "latest",
+    "intl": "^1.2.5",
+    "intl-locales-supported": "^1.8.10",
     "lazysizes": "latest",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-intl": "^4.7.2",
     "react-swipeable-views": "latest"
   },
   "devDependencies": {
@@ -47,6 +50,7 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-react": "^7.19.0",
+    "express": "^4.17.1",
     "husky": "^4.2.3",
     "jest": "^25.2.3",
     "jest-watch-typeahead": "^0.5.0",
